<resources>
    <string name="app_name" translatable="false">Doowa</string>
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button">LOGIN</string>
    <string name="login_forgotPass">Forgot Password?</string>
    <string name="login_register">Register</string>
    <string name="forgotPass_enterEmail">Enter Your Email Here</string>
    <string name="forgotPass_emailField">E-mail</string>
    <string name="forgotPass_buttonVeri">SEND EMAIL VERIFICATION</string>
    <string name="register_fullname">Fullname</string>
    <string name="register_username">Username</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_confirm">Confirm Password</string>
    <string name="register_button">REGISTER</string>
    <string name="register_alreadyHaveAcc">Already has an account? Log in.</string>
    <string name="main_hometab">Home</string>
    <string name="main_requesttab">Request</string>
    <string name="main_foodbanktab">Foodbank</string>
    <string name="main_accounttab">Account</string>
    <string name="detail_needHelpRq">I need help with:</string>
    <string name="detail_needHelpFb">We provide help for:</string>
    <string name="detail_posted">Posted On: </string>
    <string name="detail_giveHelpRq">Give Help?</string>
    <string name="detail_giveHelpFb">Ask For Help?</string>
    <string name="detail_name">Name: </string>
    <string name="detail_address">Address: </string>
    <string name="detail_details">Details: </string>
    <string name="detail_timeRq">Meeting time: </string>
    <string name="detail_timeFb">Operating Hours: </string>
    <string name="detail_transferMoney">TRANSFER MONEY</string>
    <string name="detail_report">Report this submission?</string>
    <string name="report_title">Submission Report</string>
    <string name="report_text">Enter your report details of this submission.</string>
    <string name="report_button">SUBMIT</string>
    <string name="request_name">Requester Name</string>
    <string name="request_type">Choose Donation Type</string>
    <string name="request_address">Address</string>
    <string name="request_details">Details (Tell more about what you want to help with)</string>
    <string name="request_time">Available Meeting Time (Optional)</string>
    <string name="request_phone">Contact Number</string>
    <string name="request_bank">Bank and Account Number (Optional)</string>
    <string name="camera">Upload Picture</string>
    <string name="set_map">SET MAP LOCATION</string>
    <string name="foodbank_name">Organization Name</string>
    <string name="foodbank_type">Choose Donation Type</string>
    <string name="foodbank_address">Address</string>
    <string name="foodbank_details">Details (Tell more about what you are donating)</string>
    <string name="foodbank_time">Operating Hours</string>
    <string name="foodbank_phone">Contact Number</string>
    <string name="setLoc_marker">Hold and drag to location</string>
    <string name="setLoc_setLocation">SET LOCATION</string>
    <string name="setLoc_CurrLoc">USE CURRENT LOCATION</string>
    <string name="camera_choose">CHOOSE FILE</string>
    <string name="camera_filename">Enter file name (optional)</string>
    <string name="camera_use">Use Image</string>
    <string name="camera_title">Picture Upload</string>
    <string name="account_rating">Ratings</string>
    <string name="account_submissionList">Submission List</string>
    <string name="account_tracker">Donation Tracker</string>
    <string name="account_exchange">Points Exchange</string>
    <string name="account_lang">Change Language</string>
    <string name="account_history">Donation/Requests History</string>
    <string name="account_bugs">Bugs Report/Suggestions</string>
    <string name="account_signout">Sign Out</string>
    <string name="sublist_title">Submission List</string>
    <string name="sublist_details">Details</string>
    <string name="sublist_loc">Check Location</string>
    <string name="sublist_del">Delete Submission</string>
    <string name="sublist_restore">Restore Submission</string>
    <string name="historylist_title">Donation/Requests History</string>
    <string name="tracker_title">Package Tracking</string>
    <string name="tracker_text">Enter Tracking No.</string>
    <string name="tracker_button">Check Tracking</string>
    <string name="bug_title">Bug Report/Suggestions</string>
    <string name="bug_text">Enter your bug reports or suggestions here</string>
    <string name="bug_btn">SUBMIT</string>
    <string name="signout_title">Sign Out</string>
    <string name="signout_message">Are you sure you want to log out?</string>
    <string name="language_choose">Choose Language</string>
    <string name="bank_choose">Choose Bank</string>
    <string name="woori">Woori</string>
    <string name="hana">KEB Hana</string>
    <string name="sinhan">Shinhan</string>
    <string name="kookmin">Kookmin</string>
    <string name="nonghyeon">Nonghyup</string>
    <string name="suhyup">Suhyup</string>
    <string name="guidelines">You can read our submission guidelines <a href="https://github.com/jpog99/DOOWA/tree/master/documentations#submission-guidelines">here</a></string>
    <string name="hyperlink_tnc">I agree with the <a href="https://github.com/jpog99/DOOWA/tree/master/documentations#doowa-term-and-services">Terms and Conditions</a></string>
    <string-array name="donationType_list">
        <item>Money</item>
        <item>Necessities</item>
        <item>Groceries</item>
        <item>Others</item>
    </string-array>
    <string name="title_activity_faqactivity">FAQActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
</resources>